--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 
-        <p>Hello World</p>
+        <p>Hello People</p>
 
         <script src="./app.js"></script>
         
